OpenApi and Swagger refactor
- added `DocsController`
- Swagger UI is accesible on the endpoint `/api/docs`
- OpenApi schemas are accessible on the endpoint `/api/docs/schema/{version}`
- refactored OpenApi schema (CameCase notation, better schema names etc.)
- removed `OpenApiController`
- removed SwaggerModule from Web
- removed service `OpenApiConfiguration`
